<resources>
    <string name="app_name">AngelaPrototype</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña (opcional)</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Iniciar</string>
    <string name="error_invalid_email">La dirección de correo electrónico introducida no es válida</string>
    <string name="error_invalid_password">Contraseña demasiado corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="title_activity_main">Pantalla principal</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="password_repeat">Repetir contraseña</string>
    <string name="dni">DNI</string>
    <string name="name">Nombre</string>
    <string name="second_name">Primer apellido</string>
    <string name="last_name">Segundo apellido</string>
    <string name="tarjeta_sanitaria">Tarjeta Sanitaria</string>
    <string name="localidad">Localidad</string>
    <string name="municipio">Municipio</string>
    <string name="direccion">Vía</string>
    <string name="portal">Nº</string>
    <string name="puerta">Puerta</string>
    <string name="cp">Código postal</string>
    <string name="register_button">Enviar</string>

    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>

    <string name="action_settings">Ajustes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
